--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^0.17.1",
     "element-ui": "^2.0.9",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vux": "^2.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -43,6 +44,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.0",
     "jest-serializer-vue": "^0.3.0",
+    "mockjs": "^1.0.1-beta3",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
@@ -52,6 +54,7 @@
     "postcss-loader": "^2.0.8",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.6",
+    "sass-resources-loader": "^1.3.3",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
