--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "element-china-area-data": "^4.1.0",
     "element-ui": "^2.0.9",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
